# FindCommunity

./: .gitignore  CMakeLists.txt  cluster.cc  cluster.h  findcluster.cc  findcluster.h  input.cc  input.h  main.cc
Xcode/: output
Xcode/FindCommunity.xcodeproj/: project.pbxproj
Xcode/FindCommunity.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/FindCommunity.xcodeproj/project.xcworkspace/xcshareddata/: FindCommunity.xccheckout
Xcode/FindCommunity.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/xcdebugger/: Expressions.xcexplist
Xcode/FindCommunity.xcodeproj/xcuserdata/andy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/FindCommunity.xcodeproj/xcuserdata/andy.xcuserdatad/xcschemes/: FindCommunity.xcscheme  xcschememanagement.plist
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
